[gd_scene load_steps=3 format=3 uid="uid://dofjcqgb2b12u"]

[ext_resource type="Script" uid="uid://c5hb5ucu8rsr4" path="res://Tasks/slime_containment_task.gd" id="1_kkhoi"]
[ext_resource type="PackedScene" uid="uid://cgfpd7o2cm31q" path="res://Tasks/slime_valve_task_element.tscn" id="2_nka7i"]

[node name="Slime_Containment_Task" type="Node2D"]
script = ExtResource("1_kkhoi")

[node name="Valve1" parent="." instance=ExtResource("2_nka7i")]
position = Vector2(400, 0)

[node name="Valve2" parent="." instance=ExtResource("2_nka7i")]
position = Vector2(700, 0)

[node name="Valve3" parent="." instance=ExtResource("2_nka7i")]
position = Vector2(1000, 0)

[node name="Valve4" parent="." instance=ExtResource("2_nka7i")]
position = Vector2(1300, 0)

[node name="Valve5" parent="." instance=ExtResource("2_nka7i")]
position = Vector2(1600, 0)

[node name="Control" type="Control" parent="."]
z_index = -1
layout_mode = 3
anchors_preset = 0
offset_left = 300.0
offset_top = 750.0
offset_right = 1720.0
offset_bottom = 1000.0
mouse_filter = 1

[connection signal="gui_input" from="Control" to="." method="_on_control_gui_input"]
